# workshop-lvg-dw-do-zero

./: .gitignore  README.md  pyproject.toml
app/: app.py
datawarehouse/: dbt_project.yml
datawarehouse/models/datamart/: dm_commodities.sql  schema.yml
datawarehouse/models/staging/: schema.yml  stg_commodities.sql
src/: extract_load.py
