[project]
name = "workshop-lvg-dw-do-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "danieltodaenjoei",email = "daniel.toda@enjoei.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
